# Gomoku-ia

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: Exception.hpp  Gomoku.hpp  Protocol.hpp
src/: Attack.cpp  Defence.cpp  Gomoku.cpp  Protocol.cpp  main.cpp
